--- a/config/sync/block.block.template_bootstrap_primaryadminactions.yml
+++ b/config/sync/block.block.template_bootstrap_primaryadminactions.yml
@@ -3,9 +3,9 @@ langcode: en
 status: true
 dependencies:
   theme:
-    - artemis_bootstrap
-id: artemis_bootstrap_primaryadminactions
-theme: artemis_bootstrap
+    - template_bootstrap
+id: template_bootstrap_primaryadminactions
+theme: template_bootstrap
 region: content
 weight: -2
 provider: null
