--- a/config/sync/block.block.template_bootstrap_sitebranding.yml
+++ b/config/sync/block.block.template_bootstrap_sitebranding.yml
@@ -5,9 +5,9 @@ dependencies:
   module:
     - system
   theme:
-    - artemis_bootstrap
-id: artemis_bootstrap_sitebranding
-theme: artemis_bootstrap
+    - template_bootstrap
+id: template_bootstrap_sitebranding
+theme: template_bootstrap
 region: footer_first
 weight: -7
 provider: null
