--- a/config/sync/simple_sitemap.settings.yml
+++ b/config/sync/simple_sitemap.settings.yml
@@ -9,7 +9,7 @@ entities_per_queue_item: 50
 remove_duplicates: true
 skip_untranslated: true
 xsl: true
-base_url: 'https://artemis-mascotas.com'
+base_url: 'https://template-mascotas.com'
 default_variant: default
 custom_links_include_images: false
 disable_language_hreflang: false
