--- a/config/sync/contact.form.feedback.yml
+++ b/config/sync/contact.form.feedback.yml
@@ -7,7 +7,7 @@ _core:
 id: feedback
 label: 'Comentarios sobre el sitio web'
 recipients:
-  - artemis@test.com
+  - template@test.com
 reply: ''
 weight: 0
 message: '<h2>Gracias por contactarnos.</h2><p>Hemos recibido correctamente tu consulta.</p><p>Nos pondremos en contacto contigo en la mayor brevedad posible. Si necesitas asistencia inmediata, puedes llamarnos al <strong>900 841 349</strong> y nuestro equipo de asesores te atenderá personalmente.</p>'
