--- a/config/sync/core.entity_form_display.commerce_order_item.template.add_to_cart.yml
+++ b/config/sync/core.entity_form_display.commerce_order_item.template.add_to_cart.yml
@@ -3,7 +3,7 @@ langcode: es
 status: true
 dependencies:
   config:
-    - commerce_order.commerce_order_item_type.artemis
+    - commerce_order.commerce_order_item_type.template
     - core.entity_form_mode.commerce_order_item.add_to_cart
   module:
     - commerce_order
@@ -14,9 +14,9 @@ third_party_settings:
     id: layout_onecol
     settings:
       label: ''
-id: commerce_order_item.artemis.add_to_cart
+id: commerce_order_item.template.add_to_cart
 targetEntityType: commerce_order_item
-bundle: artemis
+bundle: template
 mode: add_to_cart
 content:
   purchased_entity:
