--- a/config/sync/responsive_image.styles.cards_servicios.yml
+++ b/config/sync/responsive_image.styles.cards_servicios.yml
@@ -6,59 +6,59 @@ dependencies:
     - image.style.cards_servicios_escritorio
     - image.style.cards_servicios_movil
   theme:
-    - artemis_bootstrap
+    - template_bootstrap
 id: cards_servicios
 label: 'Cards servicios'
 image_style_mappings:
   -
     image_mapping_type: image_style
     image_mapping: cards_servicios_escritorio
-    breakpoint_id: artemis_bootstrap.extra-large
+    breakpoint_id: template_bootstrap.extra-large
     multiplier: 1x
   -
     image_mapping_type: image_style
     image_mapping: cards_servicios_escritorio
-    breakpoint_id: artemis_bootstrap.extra-large
+    breakpoint_id: template_bootstrap.extra-large
     multiplier: 2x
   -
     image_mapping_type: image_style
     image_mapping: cards_servicios_escritorio
-    breakpoint_id: artemis_bootstrap.large
+    breakpoint_id: template_bootstrap.large
     multiplier: 1x
   -
     image_mapping_type: image_style
     image_mapping: cards_servicios_escritorio
-    breakpoint_id: artemis_bootstrap.large
+    breakpoint_id: template_bootstrap.large
     multiplier: 2x
   -
     image_mapping_type: image_style
     image_mapping: cards_servicios_escritorio
-    breakpoint_id: artemis_bootstrap.medium
+    breakpoint_id: template_bootstrap.medium
     multiplier: 1x
   -
     image_mapping_type: image_style
     image_mapping: cards_servicios_escritorio
-    breakpoint_id: artemis_bootstrap.medium
-    multiplier: 2x
-  -
-    image_mapping_type: image_style
-    image_mapping: cards_servicios_movil
-    breakpoint_id: artemis_bootstrap.small
-    multiplier: 1x
-  -
-    image_mapping_type: image_style
-    image_mapping: cards_servicios_movil
-    breakpoint_id: artemis_bootstrap.small
+    breakpoint_id: template_bootstrap.medium
     multiplier: 2x
   -
     image_mapping_type: image_style
     image_mapping: cards_servicios_movil
-    breakpoint_id: artemis_bootstrap.extra-small
+    breakpoint_id: template_bootstrap.small
     multiplier: 1x
   -
     image_mapping_type: image_style
     image_mapping: cards_servicios_movil
-    breakpoint_id: artemis_bootstrap.extra-small
+    breakpoint_id: template_bootstrap.small
     multiplier: 2x
-breakpoint_group: artemis_bootstrap
+  -
+    image_mapping_type: image_style
+    image_mapping: cards_servicios_movil
+    breakpoint_id: template_bootstrap.extra-small
+    multiplier: 1x
+  -
+    image_mapping_type: image_style
+    image_mapping: cards_servicios_movil
+    breakpoint_id: template_bootstrap.extra-small
+    multiplier: 2x
+breakpoint_group: template_bootstrap
 fallback_image_style: '_original image_'
