--- a/config/sync/responsive_image.styles.hero_long.yml
+++ b/config/sync/responsive_image.styles.hero_long.yml
@@ -9,59 +9,59 @@ dependencies:
     - image.style.hero_long_xl
     - image.style.hero_long_xs
   theme:
-    - artemis_bootstrap
+    - template_bootstrap
 id: hero_long
 label: 'Hero long'
 image_style_mappings:
   -
     image_mapping_type: image_style
     image_mapping: hero_long_xl
-    breakpoint_id: artemis_bootstrap.extra-large
+    breakpoint_id: template_bootstrap.extra-large
     multiplier: 1x
   -
     image_mapping_type: image_style
     image_mapping: hero_long_xl
-    breakpoint_id: artemis_bootstrap.extra-large
+    breakpoint_id: template_bootstrap.extra-large
     multiplier: 2x
   -
     image_mapping_type: image_style
     image_mapping: hero_long_lg
-    breakpoint_id: artemis_bootstrap.large
+    breakpoint_id: template_bootstrap.large
     multiplier: 1x
   -
     image_mapping_type: image_style
     image_mapping: hero_long_lg
-    breakpoint_id: artemis_bootstrap.large
+    breakpoint_id: template_bootstrap.large
     multiplier: 2x
   -
     image_mapping_type: image_style
     image_mapping: hero_long_md
-    breakpoint_id: artemis_bootstrap.medium
+    breakpoint_id: template_bootstrap.medium
     multiplier: 1x
   -
     image_mapping_type: image_style
     image_mapping: hero_long_md
-    breakpoint_id: artemis_bootstrap.medium
+    breakpoint_id: template_bootstrap.medium
     multiplier: 2x
   -
     image_mapping_type: image_style
     image_mapping: hero_long_sm
-    breakpoint_id: artemis_bootstrap.small
+    breakpoint_id: template_bootstrap.small
     multiplier: 1x
   -
     image_mapping_type: image_style
     image_mapping: hero_long_sm
-    breakpoint_id: artemis_bootstrap.small
+    breakpoint_id: template_bootstrap.small
     multiplier: 2x
   -
     image_mapping_type: image_style
     image_mapping: hero_long_xs
-    breakpoint_id: artemis_bootstrap.extra-small
+    breakpoint_id: template_bootstrap.extra-small
     multiplier: 1x
   -
     image_mapping_type: image_style
     image_mapping: hero_long_xs
-    breakpoint_id: artemis_bootstrap.extra-small
+    breakpoint_id: template_bootstrap.extra-small
     multiplier: 2x
-breakpoint_group: artemis_bootstrap
+breakpoint_group: template_bootstrap
 fallback_image_style: '_original image_'
