--- a/config/sync/responsive_image.styles.ilustracion_y_texto.yml
+++ b/config/sync/responsive_image.styles.ilustracion_y_texto.yml
@@ -10,59 +10,59 @@ dependencies:
     - image.style.ilustracion_y_texto_xl
     - image.style.ilustracion_y_texto_xs
   theme:
-    - artemis_bootstrap
+    - template_bootstrap
 id: ilustracion_y_texto
 label: 'Ilustración y texto'
 image_style_mappings:
   -
     image_mapping_type: image_style
     image_mapping: ilustracion_y_texto_xl
-    breakpoint_id: artemis_bootstrap.extra-large
+    breakpoint_id: template_bootstrap.extra-large
     multiplier: 1x
   -
     image_mapping_type: image_style
     image_mapping: ilustracion_y_texto_xl
-    breakpoint_id: artemis_bootstrap.extra-large
+    breakpoint_id: template_bootstrap.extra-large
     multiplier: 2x
   -
     image_mapping_type: image_style
     image_mapping: ilustracion_y_texto_lg
-    breakpoint_id: artemis_bootstrap.large
+    breakpoint_id: template_bootstrap.large
     multiplier: 1x
   -
     image_mapping_type: image_style
     image_mapping: ilustracion_y_texto_lg
-    breakpoint_id: artemis_bootstrap.large
+    breakpoint_id: template_bootstrap.large
     multiplier: 2x
   -
     image_mapping_type: image_style
     image_mapping: ilustracion_y_texto_md
-    breakpoint_id: artemis_bootstrap.medium
+    breakpoint_id: template_bootstrap.medium
     multiplier: 1x
   -
     image_mapping_type: image_style
     image_mapping: bloque_con_imagen_de_fondo_md
-    breakpoint_id: artemis_bootstrap.medium
+    breakpoint_id: template_bootstrap.medium
     multiplier: 2x
   -
     image_mapping_type: image_style
     image_mapping: ilustracion_y_texto_sm
-    breakpoint_id: artemis_bootstrap.small
+    breakpoint_id: template_bootstrap.small
     multiplier: 1x
   -
     image_mapping_type: image_style
     image_mapping: ilustracion_y_texto_sm
-    breakpoint_id: artemis_bootstrap.small
+    breakpoint_id: template_bootstrap.small
     multiplier: 2x
   -
     image_mapping_type: image_style
     image_mapping: ilustracion_y_texto_xs
-    breakpoint_id: artemis_bootstrap.extra-small
+    breakpoint_id: template_bootstrap.extra-small
     multiplier: 1x
   -
     image_mapping_type: image_style
     image_mapping: ilustracion_y_texto_xs
-    breakpoint_id: artemis_bootstrap.extra-small
+    breakpoint_id: template_bootstrap.extra-small
     multiplier: 2x
-breakpoint_group: artemis_bootstrap
+breakpoint_group: template_bootstrap
 fallback_image_style: '_original image_'
